--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -3,20 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('ZF2 '. $this->translate('Code Conductor'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
-        <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0') ?>
-
-        <!-- Le styles -->
-        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/images/favicon.ico'))
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap-responsive.min.css')
-                        ->prependStylesheet($this->basePath() . '/css/style.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
-
-        <!-- Scripts -->
-        <?php echo $this->headScript()->prependFile($this->basePath() . '/js/html5.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-                                      ->prependFile($this->basePath() . '/js/bootstrap.min.js')
-                                      ->prependFile($this->basePath() . '/js/jquery.min.js') ?>
 
     </head>
     <body>
@@ -37,6 +24,7 @@
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
+                <a href="<?php echo $this->url("logout");  ?>"><?php echo $this->translate("Log Out"); ?></a>
             </div>
         </div>
         <div class="container">
@@ -46,6 +34,11 @@
                 <p>&copy; 2005 - 2012 by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?></p>
             </footer>
         </div> <!-- /container -->
+        <div class="dashnav">
+            <h3>Admin Nav </h3>
+              <li class="active"><a href="<?php echo $this->url('viewposts') ?>"><?php echo $this->translate('Posts') ?></a></li>      
+           
+        </div>
         <?php echo $this->inlineScript() ?>
     </body>
 </html>
